# mk

./: INITEGL.txt  camera2.txt  游设.md  笔记.md
JsScript/: Battle.js  HotUpdatePanel.js  Player.js  Regist.js
JsScript/Helper/: BehaveTree.js  Queue.js
c/: build.gradle
c/app/: build.gradle
c/app/src/main/: AndroidManifest.xml
c/app/src/main/jni/: CMakeLists.txt  native-camera.cpp
c/app/src/main/res/values/: themes.xml
c/app/src/main/res/values-night/: themes.xml
c/gradle/wrapper/: gradle-wrapper.properties
camera2jni/: settings.gradle
camera2jni/app/: build.gradle
camera2jni/app/src/main/: AndroidManifest.xml
camera2jni/app/src/main/jni/: CMakeLists.txt  native-camera2-jni.cpp
camera2jni/app/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml
camera2jni/app/src/main/res/values/: themes.xml
camera2jni/app/src/main/res/values-night/: themes.xml
camera2jni/gradle/wrapper/: gradle-wrapper.properties
cppcamera/: settings.gradle  xxx.cpp
cppcamera/app/: build.gradle
cppcamera/app/src/main/: AndroidManifest.xml
cppcamera/app/src/main/jni/: CMakeLists.txt  cam_utils.cpp  cam_utils.h  gl_helper.cpp  gl_helper.h  native-camera2-jni.cpp
cppcamera/app/src/main/res/layout/: activity_main.xml  extraviewlayout.xml
cppcamera/app/src/main/res/menu/: menu_main.xml
cppcamera/app/src/main/res/navigation/: nav_graph.xml
cppcamera/app/src/main/res/values-night/: themes.xml
cppcamera/gradle/wrapper/: gradle-wrapper.properties
kongg/Scripts/: lead.lua.txt  main.lua.txt
kongg/Scripts/helper/: behave_tree.txt  class.lua.txt
oldScript/: BattleField.js  Data.js  HotUpdate.js
oldScript/Helper/: Clone.js  JumpWord.js  SearchAlgo.js
(+16 files in other folders)
